@startuml

class Game {
    +Player1: Player 
    +Player2: Player 
    -Turn: Int
    +StartGame()
    +DisplayScore()
    +PlayTurn()
    -UpdateScore()
}

class Board {
    +BoardGrid: List
    +Fleet: Fleet [1]
    +PrintBoard()
    +UpdateBoard()
    +PlaceShips()
    +CheckMove(moveTuple)
}

class Player {
    +Score: Int
    +Board: Board [1]
    +UpdateScore()
    +ResetBoard()
    +GetMove(): Tuple
    +FleetStatus(): Bool
}

class Ship {
    -{static}SIZE: Int
    +Health: List
    +IsSunk: Bool
    +UpdateHealth(hitIndex)
    -SinkShip()
}

class Battleship {
    -{static}SIZE: int = 5 
}

class Destroyer {
    -{static}SIZE: int = 3 
}

class Minesweeper {
    -{static}SIZE: int = 2 
}

class Fleet {
    +Battleship: Battleship [1]
    +Destroyer: Destroyer [1]
    +Minesweeper: Minesweeper [2]
    +FleetStatus(): Bool
}

Player "2 "-down-* Game
Board -right-o Player
Fleet -right-* Board

Battleship --* Fleet
Destroyer --* Fleet
Minesweeper --* Fleet

Battleship -up-|> Ship
Destroyer -up-|> Ship
Minesweeper -up-|> Ship

@enduml